# resume

./: .gitignore  README.md  build.py  config.py  data.py  dev-data.py  docker-compose.yml  pyproject.toml  resume.html  settings.toml  style.css  tasks.py
static/: style.css
templates/: about.html.jinja  body.html.jinja  colors.css  index.html.jinja  links.html.jinja  resume.html  resume.html.jinja  skills.html.jinja  style.css  style.css.jinja  training.html.jinja  work.html.jinja
