[project]
name = "resume"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dynaconf>=3.2.12",
    "funcy>=2.0",
    "invoke>=2.2.1",
    "jinja2>=3.1.6",
    "livereload>=2.7.1",
    "markdown>=3.10",
    "rich>=14.2.0",
    "watchdog>=6.0.0",
]
[project.scripts]
build = "build.py"
